# moderation-docx-extract

./: Cargo.toml  readme.md
src/: extraction.rs  info_extract.rs  lib.rs
src/extraction/: oral.rs  phase2_extract.rs
