[package]
name = "doc-read"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
csv = "1.3.1"
derive_builder = "0.20.2"
docx-rust = "0.1.8"
quick-xml = { version = "0.37.1", features = ["serialize"] }
serde = { version = "1.0.215", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
walkdir = "2.5.0"
zip = "2.2.1"
